objects/Account_Name_Audit_Trail__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Lookup Account</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Name Audit Trail</relationshipLabel>
        <relationshipName>Account_Name_Audit_Trail</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Error__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Look Error object</description>
        <label>Error</label>
        <referenceTo>Error__c</referenceTo>
        <relationshipLabel>Account Name Audit Trail</relationshipLabel>
        <relationshipName>Account_Name_Audit_Trail</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>New_Value__c</fullName>
        <description>New account name</description>
        <label>New Value</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_Value__c</fullName>
        <label>Old Value</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <defaultValue>&quot;In Progress&quot;</defaultValue>
        <description>status of account name change</description>
        <label>Status</label>
        <length>25</length>
        <type>Text</type>
    </fields>
</CustomObject>